--- a/src/main/resources/templates/subjects/topic-details.html
+++ b/src/main/resources/templates/subjects/topic-details.html
@@ -104,35 +104,41 @@
 								</div>
 
 								<div id="alternativesContainer" class="mb-3">
-									<label class="h5 form-label fw-bolder ms-5">Alternativas</label>
+									<label class="h5 form-label fw-bolder ms-3">Alternativas</label>
 
 									<div class="invalid-feedback" th:if="${#fields.hasErrors('alternatives.*')}" th:errors="*{description}">
 										Descrição inválida
 									</div>
 
 									<div id="alternatives">
-										<div class="new-alternative mb-3 d-flex justify-content-start align-items-center"
+										<div class="new-alternative mb-3 "
 											th:each="alternative, itemStat : *{alternatives}">
-											<span class="text-muted me-2"
-												th:text="${itemStat.index + 1} + '.'">1.</span>
-
-											<div class="container">
-												<textarea class="form-control me-5" rows="1"
-													th:field="*{alternatives[__${itemStat.index}__].description}"
-													placeholder="Alternativa" required>Alternativa 1</textarea>
-												<input type="text" class="form-control"
-													th:field="*{alternatives[__${itemStat.index}__].feedback.title}"
-													placeholder="Feedback da alternativa" required>
+											<span class="alternative-number text-muted me-2"
+												th:text="${itemStat.count} + '.'">1.</span>
+												
+											<div class="alternative-container">
+												<input type="hidden" class="alternativeInput"
+													th:field="*{alternatives[__${itemStat.index}__].description}" required>
+												<div class="alternativeEditor"></div>											
 											</div>
-											<div class="form-check me-3">
-												<input type="checkbox"
-													class="is-correct-alternative form-check-input"
-													th:field="*{alternatives[__${itemStat.index}__].feedback.correct}">
+											
+											<div class="feedback-container">
+												<input type="hidden" class="feedbackInput"
+													th:field="*{alternatives[__${itemStat.index}__].feedback.description}" required>
+												<div class="feedbackEditor"></div>
 											</div>
-											<button type="button"
-												class="remove-alternative btn btn-outline-danger btn-sm">
-												<i class="fa fa-trash fa-lg" aria-hidden="true"></i>
-											</button>
+											
+											<div class="d-flex justify-content-end align-items-center">
+												<button type="button"
+													class="remove-alternative btn btn-outline-danger btn-sm me-3">
+													<i class="fa fa-trash fa-lg" aria-hidden="true"></i>
+												</button>	
+												<div class="form-check">
+													<input type="checkbox"
+														class="is-correct-alternative form-check-input"
+														th:field="*{alternatives[__${itemStat.index}__].feedback.correct}">
+												</div>								
+											</div>
 										</div>
 									</div>
 
