--- a/src/main/resources/templates/admin/questions.html
+++ b/src/main/resources/templates/admin/questions.html
@@ -33,10 +33,21 @@
 							<td class="align-middle"><p class="content truncate" th:text="${question.description}"></p></td>
 							<td class="align-middle text-center" th:text="${question.type.displayName}"></td>
 							<td class="align-middle" th:text="${question.topic != null? question.topic.name : ''}"></td>
-							<td class="align-middle" th:text="${#dates.format(question.creationDate, 'dd/MM/yyyy')}"></td>
-							<td class="align-middle text-center" th:text="${question.status.displayName}"></td>
-							<td class="align-middle"><a class="btn btn-outline-dark btn-sm" href="#"
-									th:href="@{/admin/questions/{id}(id=${question.id})}">Ver mais</a></td>
+							<td class="align-middle text-center" th:text="${#dates.format(question.creationDate, 'dd/MM/yyyy')}"></td>
+							<td class="align-middle fw-bold text-center" th:text="${question.status.displayName}"></td>
+							<td class="align-middle">
+								<div class="d-flex justify-content-center">
+									<form class="me-2" action="#" th:action="@{/admin/questions/{id}/delete(id=${question.id})}" method="post">
+										<button type="submit" class="btn btn-sm btn-outline-danger">
+											<i class="fa fa-trash fa-lg" aria-hidden="true"></i>
+										</button>
+									</form>		
+									<a class="btn btn-outline-dark btn-sm" href="#"
+										th:href="@{/admin/questions/{id}(id=${question.id})}">
+										<i class="bi bi-search"></i>
+									</a>						
+								</div>
+							</td>
 						</tr>
 					</tbody>
 				</table>
