--- a/src/main/resources/templates/subjects/topic-details.html
+++ b/src/main/resources/templates/subjects/topic-details.html
@@ -86,7 +86,7 @@
 						class="accordion-button collapsed bg-danger text-white fw-bold" type="button"
 						data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false"
 						aria-controls="collapseTwo" style="height: 50px">
-						<h6>Deseja compartilhar seu conhecimento ? Contribua agora!</h6>
+						<h6>Deseja compartilhar seu conhecimento? Crie uma nova questão!</h6>
 					</button>
 				</h6>
 				<div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
