--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -2,12 +2,26 @@
 
 <html xmlns:th="www.thymeleaf.org" th:replace="~{fragments/layout :: base('Ação inválida', ~{::body}, _, _, _)}">
 
-  <body>
-  	<div class="container p-2">
-	    <img th:src="@{/images/icon.png}"/>
-	    <h2>Ação inválida...</h2>
-	    <p th:text="${message}">Exception message</p>
-  	</div>
-  </body>
+<body>
+	<div class="container-fluid col-md-8 mt-4">
+		<div class= "card">
+			<div class="card-body">
+				<div class="card-header bg-white mb-3">
+					<h2 class="text-center">Ação inválida...</h2>
+				</div>
+				<div class="row">
+					<div class="col-md-4">
+						<img th:src="@{/images/icon.png}" />					
+					</div>
+					<div class=col-md-8>
+						<span class="h6 fw-bold">A ÚLTIMA AÇÃO NÃO FOI PROCESSADA CORRETAMENTE</span><br>		
+						<span class="h6">A página que você tentou acessar não foi carregada e acontece pelo seguinte motivo:</span>
+						<p th:text="${message}">Exception message</p>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+</body>
 
 </html>
