Improve error page ui

--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -14,8 +14,8 @@
 						<img th:src="@{/images/icon.png}" />					
 					</div>
 					<div class=col-md-8>
-						<span class="h6 fw-bold">A ÚLTIMA AÇÃO NÃO FOI PROCESSADA CORRETAMENTE</span><br>		
-						<span class="h6">A página que você tentou acessar não foi carregada e acontece pelo seguinte motivo:</span>
+						<div class="h6 fw-bold">A ÚLTIMA AÇÃO NÃO FOI PROCESSADA CORRETAMENTE</div>	
+						<div class="h6">A página que você tentou acessar não foi carregada e acontece pelo seguinte motivo:</div>
 						<p th:text="${message}">Exception message</p>
 					</div>
 				</div>
