--- a/src/main/resources/templates/users/question-edit.html
+++ b/src/main/resources/templates/users/question-edit.html
@@ -26,17 +26,17 @@
 
 		<div class="card mt-3">
 			<div class="card-body">
-				<h3 class="card-title text-center fw-bold"
-					th:text="|Questão - #${question.id} - ${question.status.displayName}|">Questão #146</h3>
+				<h4 class="card-title text-center fw-bold"
+					th:text="|Questão - #${question.id} - ${question.status.displayName}|">Questão #146</h4>
 
-				<form id="question-form" action="#" method="post" th:action="@{/questions/{id}(id=${question.id})}"
+				<form id="newQuestionForm" action="#" method="post" th:action="@{/questions/{id}(id=${question.id})}"
 					th:object="${question}">
 					<div class="mb-3">
-						<div id="question-editor" th:utext="${question.description}"></div>
+						<div id="newQuestionEditor" th:utext="${question.description}"></div>
 						<input type="hidden" th:field="*{description}">
 					</div>
 
-					<div id="alternativesContainer" class="mb-4 rounded">
+					<div id="alternativesContainer" class="mb-4">
 						<label class="h5 form-label fw-bolder ms-3">Alternativas</label>
 
 						<div id="alternatives">
@@ -46,15 +46,15 @@
 									th:text="${itemStat.count} + '.'">1.</span>
 									
 								<div class="alternative-container">
-									<input type="hidden" class="alternativeInput"
+									<input type="hidden" class="alternative-input"
 										th:field="*{alternatives[__${itemStat.index}__].description}" required>
-									<div class="alternativeEditor"></div>
+									<div class="alternative-editor"></div>
 								</div>
 								
 								<div class="feedback-container">
-									<input type="hidden" class="feedbackInput"
+									<input type="hidden" class="feedback-input"
 										th:field="*{alternatives[__${itemStat.index}__].feedback.description}" required>
-									<div class="feedbackEditor"></div>
+									<div class="feedback-editor"></div>
 								</div>
 								
 								<div class="d-flex justify-content-end align-items-center">
@@ -74,7 +74,7 @@
 						<hr>
 
 						<div class="d-flex justify-content-end">
-							<button type="button" id="addAlternative" class="btn btn-secondary">
+							<button type="button" id="addAlternative" class="btn btn-secondary btn-sm">
 								Adicionar alternativa <i class="fa fa-plus" aria-hidden="true"></i>
 							</button>
 						</div>
@@ -104,9 +104,9 @@
 
 					<div class="mb-3">
 						<label for="type" class="h5 form-label fw-bold">Tipo de Questão (Dificuldade)</label>
-						<select class="form-select" aria-describedby="typeHelp" id="type" th:field="*{type}">
-							<option th:each="type : ${T(com.gutotech.fatecando.model.QuestionType).values()}"
-								th:value="${type}" th:text="${type.displayName}"></option>
+						<select class="form-select select2" aria-describedby="typeHelp" th:field="*{types}" multiple>
+							<option th:each="type : ${questionTypes}"
+								th:value="${type.name}" th:text="${type.name}"></option>
 						</select>
 						<div id="typeHelp" class="form-text">
 							O tipo da questão está relacionado com a dificuldade dela.
@@ -124,29 +124,12 @@
 						<span class="fw-bold h5">Outras Informações</span>
 
 						<div class="row">
-							<div class="col-md-4">
-								<div class="card">
-									<div class="card-body">
-										<h6 class="card-title fw-bold">Pergunta enviado por</h6>
-										<hr>
-										<span class="fw-bold">ID:</span>
-										<span th:text="${question.user.id}"></span>
-										<br>
-										<span class="fw-bold">Nome:</span>
-										<span th:text="${question.user.fullName}"></span>
-										<br>
-										<span class="fw-bold">Email:</span>
-										<span th:text="${question.user.email}"></span>
-										<br>
-									</div>
-								</div>
-							</div>
 							<div class="col-md-5">
 								<div class="card">
 									<div class="card-body">
 										<h6 class="card-title fw-bold">Informações Extras</h6>
 										<hr>
-										<span class="fw-bold">Data do envio:</span>
+										<span class="fw-bold">Data de envio:</span>
 										<span th:text="${#dates.format(question.creationDate, 'dd/MM/yyy HH:mm:ss')}"></span>
 										<br>
 										<span class="fw-bold">Data de atualização:</span>
@@ -171,20 +154,8 @@
 
 	<script type="text/javascript" th:inline="javascript">
 		(function () {
-			const questionEditor = new Quill('#question-editor', EditorOptions.QUESTION);
-			
-			$('.alternative-container').each(function() {
-				const content = $(this).find('.alternativeInput:first').val();
-				$(this).find('.alternativeEditor').html(content);
-			});
-			
-			$('.feedback-container').each(function() {
-				const content = $(this).find('.feedbackInput:first').val();
-				$(this).find('.feedbackEditor').html(content);
-			});
-
-			$('form').submit(function (event) {
-				$('#description').val(questionEditor.root.innerHTML);
+			$('.select2').select2({
+				closeOnSelect: false
 			});
 
 			const topics = /*[[${topics}]]*/[];
