--- a/src/main/resources/templates/users/my-favorite-topics.html
+++ b/src/main/resources/templates/users/my-favorite-topics.html
@@ -39,6 +39,7 @@
 
 			<div class="col col-sm-9" id="main">
 				<h3 class="fw-bold border-5 border-start border-danger ps-3 my-4">Meus favoritos</h3>
+				<div class="text-center" th:if="${#maps.isEmpty(subjectTopicsMap)}">Você ainda não marcou nenhum tópico como favorito.</div>
 				<div class="list-group">
 					<th:block th:each="element : ${subjectTopicsMap}">
 						<h5 th:id="|${element.key}|">[[${element.key}]]</h5>
