--- a/src/main/resources/templates/admin/user-profile.html
+++ b/src/main/resources/templates/admin/user-profile.html
@@ -15,7 +15,7 @@
 			<div class="card-body">
 				<h4 class="card-title text-center fw-bolder">Editar Perfil</h4>
 
-				<form action="#" method="post" th:action="@{/users/edit-profile}" th:object="${user}">
+				<form action="#" method="post" th:action="@{/admin/users/{id}(id=${user.id})}" th:object="${user}">
 					<div class="mb-3">
 						<label for="fullName" class="form-label">Nome Completo</label>
 						<input type="text" id="fullName" class="form-control" maxlength="40" th:field="*{fullName}"
@@ -24,10 +24,20 @@
 						<div id="nameFeedback" class="invalid-feedback" th:if="${#fields.hasErrors('fullName')}"
 							th:errors="*{fullName}">Mensagem de erro</div>
 					</div>
-
-					<div class="mb-3">
-						<label for="email" class="form-label">Email</label>
-						<input type="text" id="email" class="form-control" th:field="*{email}" disabled>
+					
+					<div class="row mb-3">
+						<div class="col-md-10">
+							<label for="email" class="form-label">Email</label>
+							<input type="text" id="email" class="form-control" th:field="*{email}" disabled>	
+						</div>
+						<div class="col-md-2 d-flex justify-content-center align-items-center">
+							<div class="form-check mt-3 h4">
+								<input class="form-check-input" type="checkbox" value="" th:field="*{enabled}">
+							  	<label class="form-check-label mt-1" for="enabled">
+							    	Ativo
+							  	</label>
+							</div>
+						</div>
 					</div>
 
 					<div class="row mb-4">
@@ -62,6 +72,13 @@
 									<option th:each="subject : ${allSubjects}" th:value="${subject.id}" 
 										th:text="${subject.name}" th:selected="${#lists.contains(mySubjects, subject)}"></option>
 								</select>
+							</div>
+							
+							<div class="form-check">
+								<input class="form-check-input" type="checkbox" value="" th:field="*{authorizedTeacher}">
+							  	<label class="form-check-label" for="enabled">
+							    	Professor Autorizado
+							  	</label>
 							</div>
 						</div>
 					</div>
