--- a/src/main/resources/templates/subjects/subject.html
+++ b/src/main/resources/templates/subjects/subject.html
@@ -183,8 +183,7 @@
 						<div class="d-flex w-100 justify-content-between">
 							<div class="d-flex align-items-center">
 								<h5 class="mb-1 fw-bolder" th:text="${topic.name}">Topic Name</h5>
-								<i class="bi bi-grip-horizontal ms-2" style="font-size: 1.5rem;" 
-									sec:authorize="hasAnyRole('ROLE_ADMIN', 'ROLE_TEACHER')" th:if="${isTeacher}"></i>
+								<i class="bi bi-grip-horizontal ms-2" style="font-size: 1.5rem;" th:if="${isTeacher}"></i>
 							</div>
 
 							<i class="fa fa-check-circle fa-2x green" aria-hidden="true"
@@ -480,8 +479,7 @@
 		}
 	</script>
 
-	<script type="text/javascript" th:if="${isTeacher and page == 'topics'}" 
-			sec:authorize="hasAnyRole('ROLE_ADMIN', 'ROLE_TEACHER')">
+	<script type="text/javascript" th:if="${isTeacher and page == 'topics'}">
 		let element = document.getElementById('topics');
 
 		Sortable.create(element, {
