--- a/src/main/resources/templates/admin/questions.html
+++ b/src/main/resources/templates/admin/questions.html
@@ -13,9 +13,9 @@
 		</div>
 		
 		<div class="card mt-3 border border-1">
-			<h4 class="card-header text-center">Todas as Questões [[${topic != null} ? 'de ' + ${topic.name} : '']]</h4>
+			<h4 class="card-header text-center bg-white fw-bold">Todas as Questões [[${topic != null} ? 'de ' + ${topic.name} : '']]</h4>
 			<div class="card-body">
-				<table id="table" class="table table-sm cell-border compact order-column table-hover compact stripe">
+				<table id="table" class="table table-sm table-hover cell-border compact order-column">
 					<thead class="thead-dark text-center">
 						<tr>
 							<th>ID</th>
@@ -32,7 +32,12 @@
 							<td class="align-middle fw-bold text-center" th:text="${question.id}"></td>
 							<td class="align-middle"><p class="content truncate" th:text="${question.description}"></p></td>
 							<td class="align-middle text-center" th:text="${#strings.listJoin(question.types, ', ')}"></td>
-							<td class="align-middle" th:text="${question.topic != null? question.topic.name : ''}"></td>
+							<td class="align-middle">
+								<a class="text-decoration-none text-dark" href="#"
+									th:if="${question.topic != null}"
+									th:href="@{/topic/{id}(id=${question.topic.id})}" th:text="${question.topic.name}">Nome
+								</a>
+							</td>	
 							<td class="align-middle text-center" th:text="${#dates.format(question.creationDate, 'dd/MM/yyyy')}"></td>
 							<td class="align-middle fw-bold text-center" th:text="${question.status.displayName}"></td>
 							<td class="align-middle">
