--- a/src/main/resources/templates/admin/topics.html
+++ b/src/main/resources/templates/admin/topics.html
@@ -14,11 +14,9 @@
 	
 
 	<div class="card mt-3 border border-1">
+		<h4 class="card-header text-center bg-white fw-bolder">Gerenciar Tópicos</h4>
 		<div class="card-body">
-			<h4 class="card-title text-center fw-bolder">Gerenciar Tópicos</h4>
-			<hr>
-
-			<table id="table" class="table table-sm table-striped table-bordered table-hover">
+			<table id="table" class="table table-sm table-hover cell-border compact order-column">
 				<thead class="thead-dark text-center">
 					<tr>
 						<th>ID</th>
@@ -33,14 +31,20 @@
 				<tbody>
 					<tr th:each="topic : ${topics}" th:data-id="${topic.id}">
 						<td class="align-middle fw-bold text-center" th:text="${topic.id}"></td>
-						<td class="align-middle fw-bold" th:text="${topic.name}"></td>
-						<td class="align-middle" th:text="${topic.subject.name}"></td>
+						<td class="align-middle fw-bold">
+							<a class="text-decoration-none text-dark" href="#" th:href="@{/topic/{id}(id=${topic.id})}" th:text="${topic.name}">
+						</td>
+						<td class="align-middle">
+							<a class="text-decoration-none text-dark" href="#" th:href="@{/subjects/{id}(id=${topic.subject.id})}" th:text="${topic.subject.name}">
+						</td>
 						<td class="align-middle text-center" th:text="${topic.required} ? 'Sim' : 'Não'"></td>
 						<td class="align-middle text-center" th:text="${#dates.format(topic.creationDate, 'dd/MM/yyyy')}"></td>
 						<td class="align-middle text-center fw-bold" th:text="${topic.status.displayName}"></td>
 						<td class="text-center">
 							<a class="btn btn-outline-dark btn-sm" href="#" 
-								th:href="@{/admin/topics/{id}(id=${topic.id})}">Ver mais</a>
+								th:href="@{/admin/topics/{id}(id=${topic.id})}">
+								<i class="bi bi-search"></i>
+							</a>
 						</td>
 					</tr>
 				</tbody>
