--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -110,7 +110,7 @@
 								<a class="dropdown-item" href="#" th:href="@{/questions}">Questões</a>
 								<div class="dropdown-divider"></div>
 								<a class="dropdown-item" href="#" th:href="@{/users/edit-profile}">Editar Perfil</a>
-
+								<a class="dropdown-item" href="#" th:href="@{/users/account}">Conta</a>
 								<div class="dropdown-divider"></div>
 								<a class="dropdown-item" href="#" th:href="@{/user/messages}">Mensagens</a>
 								<div class="dropdown-divider"></div>
