--- a/src/main/resources/templates/support/ticket-view.html
+++ b/src/main/resources/templates/support/ticket-view.html
@@ -17,7 +17,9 @@
 					</ol>
 				</nav>
 
-				<h3 class="fw-bold border-5 border-danger border-start ps-2">[[${ticket.id}]]# Ticket</h3>
+				<h4 class="fw-bold border-5 border-danger border-start ps-2">
+					[[${ticket.id}]]# Ticket - [[${ticket.status.displayName}]]
+				</h4>
 
 				<hr>
 
@@ -37,12 +39,13 @@
 						</div>
 						<div class="mb-2">
 							<span class="text-muted">Descrição</span>
-							<div id="description-editor" th:utext="${ticket.description}"></div>
+							<div id="descriptionEditor" th:utext="${ticket.description}"></div>
 						</div>
 					</div>
 				</div>
 
 				<div class="responses">
+					<h6>Respostas</h6>
 					<div class="list-group list-group-numbered">
 						<div class="list-group-item d-flex justify-content-between align-items-start"
 							th:each="response : ${responses}">
@@ -55,9 +58,8 @@
 					</div>
 				</div>
 
-				<div class="mt-5">
-					<div class=""></div>
-					<form id="response-form" action="#" method="post" th:object="${response}">
+				<div class="mt-3" th:if="${not isClosed}">
+					<form id="response-form" action="#" method="post" th:action="@{/support/ticket/{id}(id=${ticket.id})}" th:object="${response}">
 						<label for="content">Sua resposta</label>
 						<textarea rows="2" class="form-control mb-3" th:field="*{content}" required></textarea>
 
@@ -73,12 +75,7 @@
 	<script th:src="@{/js/quill-utils.js}"></script>
 
 	<script type="text/javascript">
-		let descriptionEditor = new Quill('#description-editor',
-				EditorOptions.READ_ONLY);
-
-		$('#ticket-form').submit(function(event) {
-			$('#description').val(descriptionEditor.root.innerHTML);
-		});
+		new Quill('#descriptionEditor', EditorOptions.READ_ONLY);
 	</script>
 </body>
 </html>
