--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -40,6 +40,9 @@
 								<a class="dropdown-item" href="#" th:href="@{/admin/subjects}">Disciplinas</a>
 							</li>
 							<li>
+								<a class="dropdown-item" href="#" th:href="@{/admin/support}">Suporte</a>
+							</li>
+							<li>
 								<hr class="dropdown-divider">
 							</li>
 							<li>
