--- a/src/main/resources/templates/support/ticket-view.html
+++ b/src/main/resources/templates/support/ticket-view.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
-<html xmlns:th="www.thymeleaf.org"
-	th:replace="~{fragments/layout :: base('Ticket de Suporte', ~{::body}, _, _, _)}">
+<html xmlns:th="www.thymeleaf.org" th:replace="~{fragments/layout :: base('Ticket de Suporte', ~{::body}, _, _, _)}">
+
 <head>
-<meta charset="utf-8">
+	<meta charset="utf-8">
 </head>
+
 <body>
 	<div class="container mt-3">
 		<div class="row justify-content-center">
@@ -11,24 +12,33 @@
 				<nav style="-bs-breadcrumb-divider: '&gt;';" aria-label="breadcrumb">
 					<ol class="breadcrumb">
 						<li class="breadcrumb-item">
-							<a href="#" class="link-dark" th:href="@{/support}">Suporte</a>
+							<a href="#" class="link-dark" th:href="@{/support}" th:unless="${adminMode}">Suporte</a>
+							<a href="#" class="link-dark" th:href="@{/admin/support}" th:if="${adminMode}">Tickets de Suporte</a>
 						</li>
-						<li class="breadcrumb-item active" aria-current="page">Ticket de Suporte</li>
+						<li class="breadcrumb-item active" aria-current="page">Ticket</li>
 					</ol>
 				</nav>
 
 				<h4 class="fw-bold border-5 border-danger border-start ps-2">
-					[[${ticket.id}]]# Ticket - [[${ticket.status.displayName}]]
+					[[${ticket.id}]]# Ticket
 				</h4>
 
 				<hr>
 
 				<div class="card mb-3">
 					<div class="card-body">
-						<div class="row mb-2">
-							<span class="text-muted col-sm-2 col-form-label">Categoria</span>
-							<div class="col-sm-10">
-								<span class="form-control" th:text="${ticket.category.displayName}"></span>
+						<div class="row mb-3">
+							<div class="col">
+								<span class="text-muted col-sm-2 col-form-label">Categoria</span>
+								<div class="col-sm-10">
+									<span class="form-control" th:text="${ticket.category.displayName}"></span>
+								</div>
+							</div>
+							<div class="col" th:if="${adminMode}">
+								<label class="text-muted" for="ticketStatusSelect">Status</label>
+								<select id="ticketStatusSelect" class="form-select" aria-label="Default select example">
+									<option th:each="s : ${status}" th:value="${s}" th:text="${s.displayName}" th:selected="${s == ticket.status}"></option>
+								</select>
 							</div>
 						</div>
 						<div class="row mb-2">
@@ -46,12 +56,14 @@
 
 				<div class="responses">
 					<h6>Respostas</h6>
+					<div th:if="${#lists.isEmpty(responses)}">Nenhuma resposta.</div>
 					<div class="list-group list-group-numbered">
 						<div class="list-group-item d-flex justify-content-between align-items-start"
 							th:each="response : ${responses}">
 							<div class="ms-2 me-auto">
 								<div class="fw-bold mb-3"
-									th:text="${response.user.fullName + ' - ' + #dates.format(response.date, 'dd/MM/yyyy HH:mm')}">Subheading</div>
+									th:text="${response.user.fullName + ' - ' + #dates.format(response.date, 'dd/MM/yyyy HH:mm')}">
+									Subheading</div>
 								<div>[[${response.content}]]</div>
 							</div>
 						</div>
@@ -59,7 +71,8 @@
 				</div>
 
 				<div class="mt-3" th:if="${not isClosed}">
-					<form id="response-form" action="#" method="post" th:action="@{/support/ticket/{id}(id=${ticket.id})}" th:object="${response}">
+					<form id="response-form" action="#" method="post"
+						th:action="@{/support/ticket/{id}(id=${ticket.id})}" th:object="${response}">
 						<label for="content">Sua resposta</label>
 						<textarea rows="2" class="form-control mb-3" th:field="*{content}" required></textarea>
 
@@ -74,8 +87,32 @@
 
 	<script th:src="@{/js/quill-utils.js}"></script>
 
-	<script type="text/javascript">
+	<script>
 		new Quill('#descriptionEditor', EditorOptions.READ_ONLY);
 	</script>
+	
+	<script th:if="${adminMode}">
+		$('#ticketStatusSelect').change(function () {
+			$.ajax({
+			    url: location.href + '/status',
+			    data: $(this).find('option:selected').val(),
+			    contentType: 'text/plain',
+			    type: 'POST',
+			    async: true,
+			    statusCode: {
+			        404: function (response) {
+			            alert(404);
+			        },
+			        200: function (response) {
+			            alert(response);
+			        }
+			    },
+			    error: function (jqXHR, status, errorThrown) {
+			        alert('error');
+			    }
+			});
+		});
+	</script>
 </body>
+
 </html>
